@startuml ecommerce_model

enum OrderStatus {
  PENDING
  PAID
  FAILED
  CANCELLED
}

enum PaymentStatus {
  INITIATED
  APPROVED
  DECLINED
  ERROR
}

class Product {
  id: String
  name: String
  description: String
  price: double
  stockQty: int
  imageUrl: String
}

class CartItem {
  quantity: int
  +subtotal(): double
}

class Order {
  id: String
  +totalAmount: double
  status: OrderStatus
  createdAt: DateTime
}

class PaymentTransaction {
  transactionId: String
  amount: double
  status: PaymentStatus
  responseCode: String
  responseMessage: String
  createdAt: DateTime
}

Product "1" <-- "*" CartItem : references
Order "1" *-- "*" CartItem : owns (items list)
Order "1" -- "*" PaymentTransaction : payment attemppts (multiple retries)

' ===== Notes to explain the "why" =====
note right of Order
Order exists first as a business record:
- status starts as PENDING
- totalAmount derived from CartItems
end note

note right of PaymentTransaction
PaymentTransaction is an attempt to pay an Order:
- INITIATED -> APPROVED/DECLINED/ERROR
- multiple attempts possible (retries)
end note

@enduml
